--- a/templates/email_with_style_tag.html
+++ b/templates/email_with_style_tag.html
@@ -18,7 +18,6 @@
 			/* /\/\/\/\/\/\/\/\/ RESET STYLES /\/\/\/\/\/\/\/\/ */
 			body {margin: 0; padding: 0;}
 			img {border: 0; height: auto; line-height: 100%; outline: none; text-decoration: none;}
-			table {border-collapse: collapse !important;}
 			body, #bodyTable, #bodyCell {height: 100% !important; margin: 0; padding: 0; width: 100% !important;}
 			/* /\/\/\/\/\/\/\/\/ TEMPLATE STYLES /\/\/\/\/\/\/\/\/ */
 			/* ========== Page Styles ========== */
@@ -111,7 +110,8 @@
 				font-size: 14px;
                 padding-top: 15px;
                 padding-bottom: 15px;
-                border: 1px solid #dbdee4;
+                border-right: 1px solid #dbdee4;
+                border-bottom: 1px solid #dbdee4;
                 text-align: center;
             }
             .classTable td.class-type {
