--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,7 +14,7 @@
     </div>
 </div>
 
-<div class="step" id="step1">
+<div class="step" id="search">
     <div class="row justify-centered">
         <div class="step-circle row justify-centered cross-centered">
             <div>1</div>
@@ -35,7 +35,7 @@
     </div>
 </div>
 
-<div class="step" id="step2">
+<div class="step" id="select">
     <div class="row justify-centered">
         <div class="step-circle row justify-centered cross-centered">
             <div>2</div>
@@ -54,7 +54,7 @@
     </div>
 </div>
 
-<div class="step" id="step3">
+<div class="step" id="contact">
     <div class="row justify-centered">
         <div class="step-circle row justify-centered cross-centered">
             <div>3</div>
@@ -90,7 +90,7 @@
     </div>
 </div>
 
-<div class="step" id="step4">
+<div class="step" id="confirm">
     <div class="row justify-centered">
         <div class="step-circle row justify-centered cross-centered">
             <div>4</div>
