--- a/templates/email_with_style_tag.html
+++ b/templates/email_with_style_tag.html
@@ -19,6 +19,7 @@
 			body {margin: 0; padding: 0;}
 			img {border: 0; height: auto; line-height: 100%; outline: none; text-decoration: none;}
 			body, #bodyTable, #bodyCell {height: 100% !important; margin: 0; padding: 0; width: 100% !important;}
+			table {border-collapse: collapse !important;}
 			/* /\/\/\/\/\/\/\/\/ TEMPLATE STYLES /\/\/\/\/\/\/\/\/ */
 			/* ========== Page Styles ========== */
 			body, #bodyTable {
@@ -39,6 +40,11 @@
 				margin-left: 0;
 				text-align: center;
 			}
+
+            p {
+                margin: 0;
+            	padding: 0;
+            }
 
 			caption {
 				color: #a9a9a9 !important;
