--- a/templates/email_with_style_tag.html
+++ b/templates/email_with_style_tag.html
@@ -102,6 +102,7 @@
                 padding-left: 15px;
                 padding-right: 15px;
                 border: 1px solid #dbdee4;
+                border-radius: 5px;
                 text-align: left;
             }
             /* ========== Class Table Styles ========== */
@@ -119,6 +120,7 @@
                 border-right: 1px solid #dbdee4;
                 border-bottom: 1px solid #dbdee4;
                 text-align: center;
+                vertical-align: middle;
             }
             .classTable td.class-type {
                 width: 12.5%;
@@ -138,6 +140,10 @@
 
             .classTable td.class-location {
                 width: 30%;
+            }
+
+            .classTable td p {
+                margin-bottom: 10px;
             }
 			/* ========== Footer Styles ========== */
 			.footerContent {
