moved form input icons to ::befores, switched from grunt to gulp

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -29,7 +29,7 @@
 
 <div class="row justify-centered">
     <div class="search-parent">
-        <div class="search-icon"></div>
+        <label for="coursesearch" class="search-icon"></label>
         <input class="search-box" type="text" name="coursesearch" autocomplete="off" placeholder="Search for a course"/>
         <ul class="course-search-results"></ul>
     </div>
@@ -74,22 +74,22 @@
 <div class="row justify-centered">
     <div class="column cross-centered contact-info">
         <div class="row">
-            <div class="email-icon"></div>
-            <form>
+            <form action="javascript:void(0);" novalidate>
+                <label for="email" class="email-icon"></label>
                 <input class="contact-input-box" type="email" autocomplete="email" name="email" placeholder="Email"/>
             </form>
         </div>
             <div class="contact-or">or</div>
         <div class="row">
-            <div class="sms-icon"></div>
-            <form>
+            <form action="javascript:void(0);" novalidate>
+                <label for="phonenumber" class="sms-icon"></label>
                 <input class="contact-input-box" type="tel" autocomplete="tel" name="phonenumber" placeholder="Phone Number"/>
             </form>
         </div>
             <div class="contact-or">or</div>
         <div class="row">
-            <div class="yo-icon"></div>
-            <form>
+            <form action="javascript:void(0);" novalidate>
+                <label for="yoname" class="yo-icon"></label>
                 <input class="contact-input-box" type="text" autocomplete="on" name="yoname" placeholder="Yo Username"/>
             </form>
         </div>
