inlined and svged all icons, added verifying indicator, added favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,16 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-        <link rel="stylesheet" href={{ url_for('static', filename='css/tutorifull.min.css') }}>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/tutorifull.min.css') }}">
+        <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='favicon/apple-touch-icon.png') }}">
+        <link rel="icon" sizes="32x32" type="image/png" href="{{ url_for('static', filename='favicon/favicon-32x32.png') }}">
+        <link rel="icon" sizes="16x16" type="image/png" href="{{ url_for('static', filename='favicon/favicon-16x16.png') }}">
+        <link rel="manifest" href="{{ url_for('static', filename='favicon/manifest.json') }}">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon/favicon.ico') }}">
+        <meta name="apple-mobile-web-app-title" content="Tutorifull">
+        <meta name="application-name" content="Tutorifull">
+        <meta name="msapplication-config" content="{{ url_for('static', filename='favicon/browserconfig.xml') }}">
+        <meta name="theme-color" content="#38a370">
         <title>Tutorifull</title>
     </head>
     <body>
