--- a/templates/email.html
+++ b/templates/email.html
@@ -109,10 +109,8 @@
             .classTable {
                 margin-top: 20px;
             }
-            .classTable tr {
-                background-color: #85ce95;
-            }
             .classTable td {
+                background-color: #85ce95;
                 font-family: 'Montserrat', sans-serif;
 				font-size: 14px;
                 padding-top: 15px;
@@ -216,24 +214,24 @@
                                                 {{ course.course_id }}
                                             </caption>
                                             {% for class in course.classes %}
-                                                <tr style="background-color: {{ loop.cycle('#7ac18a', '#85ce95') }};">
-                                                    <td valign="top" class="class-status" style="{% if loop.first %}border-top: 1px solid #dbdee4;border-top-left-radius: 5px;{% endif %}{% if loop.last %}border-bottom-left-radius: 5px;{% endif %}border-left: 1px solid #dbdee4;-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border-right: 1px solid #dbdee4;border-bottom: 1px solid #dbdee4;text-align: center;vertical-align: middle;width: 12.5%;">
+                                                <tr>
+                                                    <td valign="top" class="class-status" style="background-color: {{ loop.cycle('#7ac18a', '#85ce95') }}; {% if loop.first %}border-top: 1px solid #dbdee4;border-top-left-radius: 5px;{% endif %}{% if loop.last %}border-bottom-left-radius: 5px;{% endif %}border-left: 1px solid #dbdee4;-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border-right: 1px solid #dbdee4;border-bottom: 1px solid #dbdee4;text-align: center;vertical-align: middle;width: 12.5%;">
                                                         {{ class.type }}
                                                     </td>
-                                                    <td valign="top" class="class-status" style="{% if loop.first %}border-top: 1px solid #dbdee4;{% endif %}-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border-right: 1px solid #dbdee4;border-bottom: 1px solid #dbdee4;text-align: center;vertical-align: middle;width: 30%;">
+                                                    <td valign="top" class="class-status" style="background-color: {{ loop.cycle('#7ac18a', '#85ce95') }}; {% if loop.first %}border-top: 1px solid #dbdee4;{% endif %}-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border-right: 1px solid #dbdee4;border-bottom: 1px solid #dbdee4;text-align: center;vertical-align: middle;width: 30%;">
                                                         {% for timeslot in class.timeslots %}
                                                             <p style="margin: 0;{% if not loop.last %}margin-bottom: 10px;{% endif %}padding: 0;">{{ timeslot.day }} {{ timeslot.start_time }}-{{ timeslot.end_time }}</p>
                                                         {% endfor %}
                                                     </td>
-                                                    <td valign="top" class="class-status" style="{% if loop.first %}border-top: 1px solid #dbdee4;{% endif %}-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border-right: 1px solid #dbdee4;border-bottom: 1px solid #dbdee4;text-align: center;vertical-align: middle;width: 30%;">
+                                                    <td valign="top" class="class-status" style="background-color: {{ loop.cycle('#7ac18a', '#85ce95') }}; {% if loop.first %}border-top: 1px solid #dbdee4;{% endif %}-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border-right: 1px solid #dbdee4;border-bottom: 1px solid #dbdee4;text-align: center;vertical-align: middle;width: 30%;">
                                                         {% for timeslot in class.timeslots %}
                                                             <p style="margin: 0;{% if not loop.last %}margin-bottom: 10px;{% endif %}padding: 0;">{{ timeslot.location }}</p>
                                                         {% endfor %}
                                                     </td>
-                                                    <td valign="top" class="class-status" style="{% if loop.first %}border-top: 1px solid #dbdee4;{% endif %}-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border-right: 1px solid #dbdee4;border-bottom: 1px solid #dbdee4;text-align: center;vertical-align: middle;width: 12.5%;">
+                                                    <td valign="top" class="class-status" style="background-color: {{ loop.cycle('#7ac18a', '#85ce95') }}; {% if loop.first %}border-top: 1px solid #dbdee4;{% endif %}-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border-right: 1px solid #dbdee4;border-bottom: 1px solid #dbdee4;text-align: center;vertical-align: middle;width: 12.5%;">
                                                         {{ class.status }}
                                                     </td>
-                                                    <td valign="top" class="class-status" style="{% if loop.first %}border-top: 1px solid #dbdee4;border-top-right-radius: 5px;{% endif %}{% if loop.last %}border-bottom-right-radius: 5px;{% endif %}-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border-right: 1px solid #dbdee4;border-bottom: 1px solid #dbdee4;text-align: center;vertical-align: middle;width: 15%;">
+                                                    <td valign="top" class="class-status" style="background-color: {{ loop.cycle('#7ac18a', '#85ce95') }}; {% if loop.first %}border-top: 1px solid #dbdee4;border-top-right-radius: 5px;{% endif %}{% if loop.last %}border-bottom-right-radius: 5px;{% endif %}-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border-right: 1px solid #dbdee4;border-bottom: 1px solid #dbdee4;text-align: center;vertical-align: middle;width: 15%;">
                                                         {{ class.enrolled }}/{{ class.capacity }}
                                                     </td>
                                                 </tr>
